# jkl

./: Cargo.toml
cli/: Cargo.toml
experiments/: Cargo.toml
experiments/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: bc1.rs  bc2.rs  bc3.rs  bc4.rs  bc5.rs  bits.rs  bytes.rs  cluster_fit.rs  encoder.rs  filter.rs  jackal.rs  lib.rs  lz77.rs  lz78.rs  lzw.rs  math.rs  nn.rs  z_curve.rs
src/format/: huffman.rs
src/jackal/: block.rs  header.rs  mod.rs
