[workspace]
members = ["cli", "gui"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]

[package]
name = "texpak"
description = "Texture packing tool"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
