[workspace]
members = ["cli", "gui"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
hashbrown = "0.15"
bitvec = "1.0"
bytemuck = { version = "1.0" }
rand = "0.8"
rand_chacha = "0.3"
brotli = "7.0"

[package]
name = "jkl"
description = "Texture compression and packing tool"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hashbrown.workspace = true
rand.workspace = true
rand_chacha.workspace = true
brotli.workspace = true
