[package]
name = "jkl-experiments"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jkl = { path = ".." }
eframe = "0.32"
image = "=0.25.2"
rand = "0.8"
egui = "0.32"

egui-snarl = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
